--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -172,7 +172,7 @@
     .Logo-sticky{
         display: flex;
         flex-flow: row nowrap;
-        
+        justify-content: space-between;
     }
     .Img-sticky{
         width: 4.5rem;
@@ -315,7 +315,7 @@
     /* GRID IMAGENES - TECNICAS */
 
     .Imgs-wrapper{
-        width: 90%;
+        width: 85%;
         background-color: white;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
