--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -170,12 +170,12 @@
         transform: scale(1.1);
     }
 
-    .Logo-sticky{
+    .Logo{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
     }
-    .Img-sticky{
+    .Logo-sticky{
         width: 4.5rem;
         position: fixed;
         margin: 1rem 0 0 0.5rem;
