--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -98,14 +98,30 @@
         background-color: var(--color-gris);
         margin: 3rem auto 0;
         padding: 2.5rem;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-content: center;
     }
 
-    .Footer-wrapper {
+    .Footer-nav{
+        gap: 3rem;
+    }
+    .Footer-h3{
+        font-family: var(--font-subtitulos);
+        font-size: 1.1em;
+    }
+    .Footer-h3:hover{
+        opacity: 50%;
+        text-decoration: underline;
+    }
+
+    .Footer-ul {
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
-        gap: 2rem;
+        gap: 1rem;
     }
     
     .Footer-li{
@@ -120,7 +136,7 @@
         font-family: var(--font-subtitulos);
         text-align: center;
         font-size: 1.2em;
-        margin: 2rem 0 0 0;
+        margin: 2.5rem 0 0 0;
     }
 
     /* LOGO STICKY */
@@ -438,10 +454,12 @@
             display: block;
             justify-content: center;
             align-content: center;
+            border-radius: 20%;
+            cursor: pointer;
         }
         .Section-imgs:hover{
-            transform:scale(1.05);
-            transition: ;
+            transform:scale(1.03);
+            transition: 0.5s ease-in ;
         }
         .Section-h2--galeria{
             text-align: center;
@@ -493,5 +511,7 @@
             transform: scale(1)
         }
 
-    
+        /* FORMULARIO - CONTACTO */
+
+
 
