--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -4,32 +4,26 @@
     border: 0;
     box-sizing: border-box;
     }
-    
     li {
     list-style: none;
     }
-    
     h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: inherit;
     }
-    
     a {
     color: inherit;
     text-decoration: none;
     display: block;
     }
-    
     p a {
     display: inline;
     }
-    
     img, picture, video, iframe {
     display: block;
     width: 100%;
     height: initial;
     }
-    
     form, input, label, select, option, textarea, button {
     font-size: inherit;
     font-family: inherit;
@@ -51,7 +45,6 @@
         html {
     scroll-behavior: smooth;
     }
-
     body {
     background: linear-gradient(to bottom, white, var(--color-principal-azul));
     }
@@ -104,56 +97,45 @@
 
     /* ++++++++++++++++ PÁGINA DE INICIO ++++++++++++++++ */
     
+    /* CABECERA - INICIO */
+
     .Header-home{
     background-color: white;
     }
-
     .Header-img{
         width: 50%;
         margin: 2rem auto;
     }
 
-    /* HEADER COMÚN PARA TODAS LAS SECCIONES CON EFECTO PARALLAX */
+    /* MENÚ RESPONSIVE COMÚN PARA TODAS LAS SECCIONES */
 
-    .Header-wrapper{
-        width: 100%;
-        height: 40vh;
-        background-image: url(/Nails-world/imgs/fondo-titulo-azul.jpg);
-        position: relative;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-attachment: fixed;
+    .Header-responsive{
+        width: 90%;
+        margin: 2rem auto;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
     }
-
-    .Header-h1{
-        color: white;
-        position: fixed;
-        top: 5%;
-        left: 50%;
-        font-family: var(--font-titulos);
-        text-transform: capitalize;
-        text-shadow: 2px 2px 6px rgb(146, 146, 146);
-        font-size: 9em;
-        margin-left: -1.2em;
+    .Header-btn{
+        font-size: 3rem;
+        display: none;
     }
-
-    /* MENÚ INICIO */
-
-    .Header-nav{
+    .Header-btn:hover{
+        color: var(--color-principal-azul);
+        transform: scale(1.2);
     }
     .Header-ul{
-        width: 50%;
-        margin: auto;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
+        gap: 2rem;
     }
     .Header-li{
         font-family: var(--font-subtitulos);
         text-transform: uppercase;
-        font-size: 1.5em;
+        font-size: 1.4em;
         letter-spacing: .0625rem;
         cursor: pointer;
     }
@@ -168,7 +150,6 @@
         width: 100%;
         background-color: var(--color-gris);
     }
-
     .Footer-wrapper{
         width: 100%;
         max-width: 1400px;
@@ -179,7 +160,6 @@
         justify-content: space-between;
         align-content: center;
     }
-
     .Footer-nav{
         gap: 3rem;
     }
@@ -193,7 +173,6 @@
         opacity: 50%;
         text-decoration: underline;
     }
-
     .Footer-ul {
         display: flex;
         flex-flow: row nowrap;
@@ -202,12 +181,10 @@
         gap: 1rem;
         padding: 0 0 0 2.5rem;
     }
-    
     .Footer-li{
         width: 1.6rem;
         cursor: pointer;
     }
-    
     .Footer-li:hover{
         opacity: 50%;
     }
@@ -234,55 +211,38 @@
 
     /* ++++++++++++++++ FORMAS ++++++++++++++++ */
 
-    /* ENCABEZADO FORMAS */
+    /* CABECERA COMÚN PARA TODAS LAS SECCIONES CON EFECTO PARALLAX */
 
-    .Header-wrapper--formas{
-        position: relative;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .Header-img--formas{
+    .Header-wrapper{
         width: 100%;
+        height: 40vh;
+        background-image: url(/Nails-world/imgs/fondo-titulo-azul.jpg);
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
     }
-    .Header-h1--formas{
-        position: absolute;
+    .Header-h1{
+        color: white;
+        position: fixed;
+        top: 5%;
+        left: 47%;
         font-family: var(--font-titulos);
         text-transform: capitalize;
-        text-shadow: var(--color-gris);
-        font-size: 11em;
+        text-shadow: 2px 2px 6px rgb(146, 146, 146);
+        font-size: 9em;
+        margin-left: -1.2em;
     }
-    
-
-    /* MENÚ - FORMAS */
-
-    .Header-ul--formas{
-        width: 60%;
-        margin: 2rem auto;
-
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .Header-li--formas{
-        font-family: var(--font-subtitulos);
-        text-transform: uppercase;
-        font-size: 1.5em;
-        letter-spacing: .0625rem;
-        cursor: pointer;
-    }
-    .Header-li--formas:hover{
-        color: var(--color-principal-azul) ;
-        transform: scale(1.1);
+    .Header-h1.Right{
+        left: 48%;
     }
 
-    /* SECTION - FORMAS */
+    /* ENCABEZADO - FORMAS */
 
     .Section-formas{
         width: 90%;
+        max-width: 1400px;
         margin: 0 auto;
         display: flex;
         flex-flow: column nowrap;
@@ -293,7 +253,7 @@
     }
     .Section-h2--formas{
         width: 80%;
-        font-size: 3em;
+        font-size: 2em;
         font-family: var(--font-textos);
         color: var(--color-gris);
         text-align: center;
@@ -314,7 +274,6 @@
         max-width: 1400px;
         margin: 0 auto;
     }
-    
     .Article-wrapper--formas{
         display: flex;
         flex-flow: column nowrap;
@@ -335,7 +294,7 @@
 
     }
     .Article-p--formas{
-        width: 85%;
+        width: 72%;
         font-family: var(--font-textos);
         text-align: justify;
         line-height: 1.5625rem;
@@ -343,54 +302,11 @@
 
     /* ++++++++++++++++ TÉCNICAS ++++++++++++++++ */
 
-    /* ENCABEZADO - TÉCNICAS */
-
-    .Header-wrapper--tecnicas{
-        position: relative;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .Header-img--tecnicas{
-        width: 100%;
-    }
-    .Header-h1--tecnicas{
-        position: absolute;
-        font-family: var(--font-titulos);
-        text-transform: capitalize;
-        text-shadow: var(--color-gris);
-        font-size: 11em;
-    }
-
-    /* MENÚ TECNICAS */
-
-    .Header-ul--tecnicas{
-        width: 60%;
-        margin: 2rem auto;
-
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .Header-li--tecnicas{
-        font-family: var(--font-subtitulos);
-        text-transform: uppercase;
-        font-size: 1.5em;
-        letter-spacing: .0625rem;
-        cursor: pointer;
-    }
-    .Header-li--tecnicas:hover{
-        color: var(--color-principal-azul) ;
-        transform: scale(1.1);
-    }
-
     /* ENCABEZADO TÉCNICAS */
 
     .Section-tecnicas{
         width: 90%;
+        max-width: 1400px;
         margin: 0 auto;
         display: flex;
         flex-flow: column nowrap;
@@ -419,13 +335,13 @@
 
     .Imgs-wrapper{
         width: 85%;
+        max-width: 1400px;
         background-color: white;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         margin: 3rem auto;
         gap: 1rem;
         padding: 1rem;
-
     }
     .Imgs-grid{
         justify-content: center;
@@ -435,9 +351,9 @@
     /* CONTENIDO - TECNICAS */
 
     .Article-tecnicas{
-        width: 85%;
+        width: 80%;
+        max-width: 1400px;
         margin: 3rem auto;
-
     }
     .Article-wrapper--tecnicas{
         display: flex;
@@ -461,64 +377,11 @@
 
     /* ++++++++++++++++ GALERÍA ++++++++++++++++ */
 
-    /* ENCABEZADO GALERÍA */
-
-    .Header-wrapper--galeria{
-        position: relative;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .Header-img--galeria{
-    width: 100%;
-    }
-    .Header-h1--galeria{
-    position: absolute;
-    font-family: var(--font-titulos);
-    text-transform: capitalize;
-    text-shadow: var(--color-gris);
-    font-size: 11em;
-    }
-
-        /* MENÚ GALERÍA */
-
-    .Header-responsive{
-        width: 90%;
-        margin: 2rem auto;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-    }
-    .Header-btn{
-        width: 50px;
-        display: none;
-    }
-    .Header-ul{
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-    }
-    .Header-li{
-        font-family: var(--font-subtitulos);
-        text-transform: uppercase;
-        font-size: 1.5em;
-        letter-spacing: .0625rem;
-        cursor: pointer;
-    }
-    .Header-li:hover{
-        color: var(--color-principal-azul) ;
-        transform: scale(1.1);
-    }
-
         /* GRID - GALERÍA */
 
         .Section-galeria{
             width: 90%;
+            max-width: 1400px;
             margin: 5rem auto;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -527,7 +390,6 @@
             justify-content: center;
             gap: 5rem;
         }
-
         .Galeria-img{
             width: 100%;
             height: 100%;
@@ -572,51 +434,7 @@
             }
 
 
-
         /* ++++++++++++++++ CONTACTO ++++++++++++++++ */
-
-
-        .Header-wrapper--contacto{
-            position: relative;
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .Header-img--contacto{
-            width: 100%;
-        }
-        .Header-h1--contacto{
-            position: absolute;
-            font-family: var(--font-titulos);
-            text-transform: capitalize;
-            text-shadow: var(--color-gris);
-            font-size: 11em;
-        }
-
-        /* MENÚ - CONTACTO */
-
-        .Header-ul--contacto{
-            width: 60%;
-            margin: 2rem auto;
-    
-            display: flex;
-            flex-flow: row nowrap;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .Header-li--contacto{
-            font-family: var(--font-subtitulos);
-            text-transform: uppercase;
-            font-size: 1.5em;
-            letter-spacing: .0625rem;
-            cursor: pointer;
-        }
-        .Header-li--contacto:hover{
-            color: var(--color-principal-azul) ;
-            transform: scale(1)
-        }
 
         /* MARQUESINA - CONTACTO */
 
@@ -624,19 +442,15 @@
             width: 100%;
             overflow: hidden;
             margin: 5rem auto;
-    
         }
         .Marquesina-caja{
             width: 200%;
             background-color: black;
-    
             display: grid;
             grid-template-columns: repeat(8, 1fr);
             align-content: center;
-    
             animation: slide 15s linear infinite;
         }
-    
         .Marquesina-texto{
             font-family: var(--font-subtitulos);
             color: white;
@@ -645,10 +459,7 @@
             letter-spacing: 0.05em;
             padding: 0.5rem 0;
         }
-
         
-
-
         /* KEY FRAMES */
 
         /* Key Frame para la marquesina, hace que se desplace el texto */
@@ -674,14 +485,22 @@
         /* MEDIA QUERY */
 
         @media (max-width: 800px){
+            
+            /* Logo sección inicio */
+            .Header-img{
+                width: 70%;
+                margin: 0 auto;
+            }
+            
+            /* Menú responsive */
             .Header-responsive{
-                width: 90%;
+                width: 100%;
                 max-width: 1400px;
                 display: flex;
                 justify-content: flex-end;
+                padding: 0 1.5rem 0 0;
             }
             .Header-btn{
-                width: 50px;
                 display: block;
             }
             .Header-nav{
@@ -693,20 +512,99 @@
                 display: block;
             }
             .Header-ul{
-                width: 100%;
-                margin: 0 auto;
-                
                 display: flex;
                 flex-direction: column;
                 align-items: flex-end;
-                
+                gap: 0.9rem;
             }
             .Header-li{
+                font-size: 1.2em;
+            }
+
+            /* Encabezado - formas */
+
+            .Section-formas{
+                width: 95%;
+                margin: 0 auto 1.5rem;
+                padding: 1rem;
+                gap: 2.5rem;
+            }
+            .Section-h2--formas{
+                width: 86%;
+                font-size: 1.7em;
+            }
+            .Section-p--formas{
+                width: 85%;
+                font-size: 0.95rem;
+            }
+
+            /* Contenido formas */
+            
+            .Article-h3--formas{
+                font-size: 4.2em;
+            }
+            .Article-p--formas{
+                font-size: 0.95em;
+            }
+
+            /* Encabezado técnicas */
+
+            .Section-tecnicas{
+                width: 95%;
+                margin: 0 auto 1.5rem;
+                padding: 1rem;
+            }
+            .Section-h2--tecnicas{
+                width: 85%;
+                font-size: 1.7em;
+                text-align: justify;
+            }
+            .Section-p--tecnicas{
+                width: 85%;
+                font-size: 0.95rem;
+            }
+
+            /* Contenido técnicas */
+
+            .Article-tecnicas{
+                width: 78%;
+            }
+            .Article-h3--tecnicas{
+                font-size: 4.2rem;
+                text-align: center;
+            }
+            .Semi-permanente{
+                font-size: 3.8em;
+            }
+            .Article-p--tecnicas{
+                font-size: 0.95em;
+            }
+
+            /* Contenido galería */
+
+            .Section-galeria{
+                gap: 2.5rem;
+            }
+            .Imagen-grande{
+                width: 60%;
+            }
+
+            /* Marquesina Contacto */
+            .Marquesina-caja{
+                width: 200%;
+                background-color: black;
+                display: grid;
+                grid-template-columns: repeat(8, 1fr);
+                align-content: center;
+                animation: slide 15s linear infinite;
+            }
+            .Marquesina-texto{
                 font-family: var(--font-subtitulos);
-                text-transform: uppercase;
-                font-size: 1.5em;
-                letter-spacing: .0625rem;
-                cursor: pointer;
+                color: white;
+                text-align: center;
+                font-size: 0.9em;
+                letter-spacing: 0.05em;
+                padding: 0.5rem 0;
             }
         }
 
